<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Discretionary Budget"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/pieCardView"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.mikephil.charting.charts.PieChart
                    android:layout_marginTop="10dp"
                    android:id="@+id/pieMainChart"
                    android:layout_width="match_parent"
                    android:layout_height="301dp" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/financialSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/financial_summary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/update_budget" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginBottom="16dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:useDefaultMargins="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/food"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:text="@string/food"
                    app:icon="@drawable/ic_food"
                    app:iconGravity="textStart"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    tools:ignore="VisualLintButtonSize" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/traveling"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:text="@string/traveling"
                    app:icon="@drawable/ic_travel"
                    app:iconGravity="textStart"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    tools:ignore="VisualLintButtonSize" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/entertainment"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:text="@string/enjoyment"
                    app:icon="@drawable/ic_entertainment"
                    app:iconGravity="textStart"
                    tools:ignore="VisualLintButtonSize" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shopping"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:text="@string/shopping"
                    app:icon="@drawable/ic_shopping"
                    app:iconGravity="textStart"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    tools:ignore="VisualLintButtonSize" />

            </GridLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>