...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieShoppingChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
...
